# openapi-agent

./: .gitignore  README.md  deploy.sh  pyproject.toml  upload_secrets.sh
adk_agents/: sample.env
adk_agents/agent/: agent.py  openapi.yaml
time_app/: .dockerignore  Dockerfile  main.py  requirements.txt  sample.env
